move file to new mac

--- a/pyspark_basics.ipynb
+++ b/pyspark_basics.ipynb
@@ -61,12 +61,16 @@
     "# filter rows\n",
     "flight.where(flight['Origin_airport']=='ATL')\n",
     "flight.where(F.col('Origin_airport').isNotNull())\n",
+    "dt = dt.where(F.size(F.col('latlons'))>0)\n",
     "\n",
     "# filter rows and select some columns\n",
     "flight.where(flight['Origin_airport']=='ATL').select(['Origin_city', 'Destination_city'])\n",
     "\n",
     "# concatenate dataframe\n",
     "flight_dup = flight.union(flight)\n",
+    "\n",
+    "# count distinct values in a column\n",
+    "df.agg(F.countDistinct(F.col('ipAddress')).alias('unique_cnt')).show()\n",
     "\n",
     "# keep distinct rows\n",
     "flight_uniq = fligh_dup.distinct() \n",
@@ -76,7 +80,14 @@
     "flight.sort(F.col('Seats').desc()).show(n=10)\n",
     "\n",
     "# groupby and aggregate\n",
-    "flight.groupBy('Origin_airport').agg(F.sum('Seats'), F.countDistinct('Destination_airport'))"
+    "flight.groupBy('Origin_airport').agg(F.sum('Seats'), F.countDistinct('Destination_airport'))\n",
+    "\n",
+    "# maximum of more than one column\n",
+    "df.select(F.max('ll_freq'), F.max('totalFreq')).show()\n",
+    "df.select(F.greatest('ll_freq', 'totalFreq')).show()\n",
+    "\n",
+    "# argmax retrieve the row with the maximum value\n",
+    "df.orderBy(F.desc('ll_freq')).limit(1).show()"
    ]
   },
   {
@@ -136,6 +147,12 @@
     "ts2Hour = F.udf(\n",
     "    lambda x: ts2hour(x),\n",
     "    returnType=IntegerType()\n",
+    ")\n",
+    "\n",
+    "# operate on multiple columns\n",
+    "maid2ID = F.udf(\n",
+    "    lambda x: 'A|1|'+x[0].upper() if x[1]=='idfa' else 'A|2|'+x[0].lower(),\n",
+    "    returnType=StringType()\n",
     ")\n",
     "\n",
     "from pyspark.sql.types import DoubleType\n",
